--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -1221,7 +1221,7 @@
         }
     }
 
-    
+
 /******** ************************************* *******/
 /******** auto-complete plugin styling *******/
 /******** ************************************* *******/
@@ -1364,3 +1364,10 @@
 /******** ************************************* *******/
 /********END   auto-complete plugin styling  END*******/
 /******** ************************************* *******/
+
+
+.focused-pushed-up{
+    position: relative!important;
+    top: -125px;
+
+}
